--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,19 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Birthday Card For NALEDI
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-input></ion-input>
+  <div id = "happy">
+  <h1><b>Happy Birthday</b></h1>
+  </div>
+
+  <div id = "name">
+    <h1><b>Naledi</b></h1>
+    </div>
+    
 </ion-content>
